==========================

v0.3.4:
---------
- Now Council Members trigger and make the level exit. Neat!
- New Collision Model for Galaxy. Hopefully better especially on sloped tiles. Also that part of the code got smaller
- Vertical and Drop Platforms work. which will make more level finishables
- Keen now can jump through some tiles and also leave platforms
- Now the platforms also move Keen
- THe Platform AI now have a special directory

v0.3.3.2:
---------
- Thanks to Malvineous IMF Player got a bit faster. He found an interesting slow down in our code
- Now switches for platforms and bridges work
- Big IMF Bug I discovered has been fixed which produced crashes on some systems
- Better Platform code
- Some PC-Speaker sound improvements
- New CG Core which has a bit less code, is easier to understand, 
  uses more smartpointers and also seems to be a bit faster.
- Less graphic glitches in OpenGL Mode
  

v0.3.3.1:
---------
- Tied up the code!
- New Audio System!
- New Graphics System!
- Fixes in the IMF Player 
- Audio changes now Keen Galaxy has sounds (also thanks to FCTW for his help!)
- Keen 5 Support initial support. (Thanks to furan for his help and cleaning up some code is it!)
- Council members, slugs and platforms are in. They don't work properly yet (Also many thanks to FCTW!)
- New Packages are available. Now Windows Installer is shipped and the Deb Packages are updated!

v0.3.3:
-------
- New audio system/manager
- Vorticon can also open and play IMF Files for music
- Fixes of a whole bunch of bugs
- Savegame system should work better
- On embedded systems the save state is written automatically putting date and level number
- more space for name in the save/load game section
- Small performance improvements, especially when loading Vorticon Keen games
- Better stereo Sound!
- Physics improvements
- Galaxy Keen now plays ingame music, finally!!!

v0.3.2.5:
---------
- Keen now can climb poles (Galaxy)