@@ -17,10 +17,9 @@ CMapPlayGalaxy(ExeFile, Inventory)
 void CWorldMap::init()
 {
 	// Load the World map level.
-	CMapLoaderGalaxy MapLoader(m_ExeFile, m_ObjectPtr, m_Inventory);
+	CMapLoaderGalaxy MapLoader(m_ExeFile, m_ObjectPtr, m_Inventory, m_Cheatmode);
 
 	MapLoader.loadMap(m_Map, 0); // Is it a Map Level?
-	m_MessageBoxes.push_back(new CMessageBoxGalaxy("Keen entered the world map:\n " + m_Map.getLevelName()));
 
 	m_Map.drawAll();
 }
