@@ -22,10 +22,11 @@ struct stItemGalaxy
 	int m_drops;
 	unsigned int m_bullets;
 	struct {
-		int red;
-		int blue;
-		int green;
-		int yellow;
+		void fillup()
+		{	red = 1, blue = 1, green = 1, yellow = 1;	};
+		void empty()
+		{	red = 0, blue = 0, green = 0, yellow = 0;	};
+		int red, blue, green, yellow;
 	} m_gem;
 
 	int m_keycards;
@@ -52,15 +53,21 @@ struct stItemGalaxy
 		m_lifeAt = 20000;
 		m_drops = 0;
 		m_bullets = 0;
-		m_gem.red = 0;
-		m_gem.blue = 0;
-		m_gem.green = 0;
-		m_gem.yellow = 0;
+		m_gem.empty();
 
 		m_keycards = 0;
 
 		m_special.ep4.elders = 0;
 		m_special.ep4.swimsuit = 0;
+	}
+
+	void triggerAllItemsCheat()
+	{
+		m_lifes = 10;
+		m_bullets = 99;
+		m_gem.fillup();
+		m_special.ep4.swimsuit = 1;
+		m_keycards = 1;
 	}
 };
 
